--- a/rasmusborste/rasmusoh.html
+++ b/rasmusborste/rasmusoh.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="head">my name is rasmus</h1>
+    <div class="head">   
+        <h1>my name is rasmus</h1>
+    </div>
+ 
 </body>
 </html>
